# constellation-nonfree

./: CMakeLists.txt  README.md  project_info.cmake
R/clustering/: kmedoids.R
cmake/: constellation-private-config.cmake.in  constellation-private-use.cmake.in
doxygen/: CMakeLists.txt  head_constellation.html
python/constel/: __init__.py  bundles_small_brains.py  info.py
python/constel/anatomist/: clusters_inspect.py
python/constel/capsul/: constel_smooth_matrix.py  main.py  regional_profile.py  smooth_matrix.py
python/constel/cmd/: average_texture_labels.py  extractLabels.py  mergeLabels.py
python/constel/lib/: average_texture_labels.py  clustervalidity.py  graphtools.py  measuringtools.py  mesh_tools.py  meshwatershedtools.py  misctools.py  plot.py  statistical_tools.py  texturetools.py  visutools.py
python/constel/lib/bundles/: bundles_select_by_label.py  bundles_tools.py
python/constel/lib/clustering/: K_optimization.py  clusterstools.py  kmedoids.py
python/constel/lib/connmatrix/: connmatrixtools.py
python/constel/lib/evaluation/: indices.py
python/constel/lib/methods/: kmedoids_clustering.py  squared_euclidean_distance_matrices.py
python/constel/lib/utils/: colormaptools.py  create_documents.py  fibertools.py  files.py  filetools.py  four_color_theorem.py  graphtools.py  matrixtools.py  meshtools.py  misctools.py  nomenclature.py  texturetools.py
python/constel/lib/validation/: measuringtools.py
python/constel/plugins_anatomist/: anatomistMergeTexMeshImaAndBundlesToROIsAndBundlesGraph.py  selectionbis.py
share/anatomist/python_plugins/: bundles_small_brains.py  bundles_split_by_cortical_regions.py
src/commands/: CMakeLists.txt
src/commands/AimsSparseMatrixSmoothing/: sparsematrixsmoothing.cc  sparsematrixsmoothing.pro
src/commands/AimsSumSparseMatrix/: sumSparseMatrix.cc
src/commands/constelBundlesFiltering/: bundlesFiltering.cc  bundlesFiltering.pro
src/commands/constelConnectionDensityTexture/: connectionDensityTexture.cc  connectionDensityTexture.pro
src/commands/constelConnectivityMatrix/: connectivityMatrix.cc  connectivityMatrix.pro
src/commands/constelFibersLengths/: fibersLengths.cc  fibersLengths.pro
src/commands/constelMeanConnectivityProfileFromMatrix/: meanConnectivityProfileFromMatrix.cc  meanConnectivityProfileFromMatrix.pro
src/commands/constelSelectBundlesFromNames/: selectBundlesFromNames.cc  selectBundlesFromNames.pro
src/commands/constelSelectFibersFromMesh/: selectFibersFromMesh.cc  selectFibersFromMesh.pro
src/sip/: CMakeLists.txt  bundles.sip  connmatrix.sip  constellation.sip  sparsematrix.sip
